<?xml version="1.0" encoding="utf-8"?>
<nl.psdcompany.duonavigationdrawer.views.DuoMenuView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:src="@drawable/my_them"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/homepage"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingStart="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/home_ic"
                    app:tint="@color/blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Home"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/traslatepage"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingStart="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/translate"
                    app:tint="@color/blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/language"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/remouveads"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingStart="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/prumiem"
                    app:tint="@color/blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/RemouvADS"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingStart="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/share_blue"
                    app:tint="@color/blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/share"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingStart="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/info_blue"
                    app:tint="@color/blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/aboutnv"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="100dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/btnclose_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <androidx.cardview.widget.CardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:cardCornerRadius="100dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/arrow_left"
                            android:background="@color/blue"
                            app:tint="@color/white" />



                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/close_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:text="@string/close"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</nl.psdcompany.duonavigationdrawer.views.DuoMenuView>