<?xml version="1.0" encoding="utf-8"?>
<nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".langue_Activity">

    <include layout="@layout/nav_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="content">

        <androidx.cardview.widget.CardView
            android:id="@+id/mainContentCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/xvack">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <include layout="@layout/toolbar" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="28dp"
                        android:layout_marginStart="0dp"
                        android:foregroundGravity="center"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="10dp"
                        card_view:cardElevation="16dp"
                        card_view:cardUseCompatPadding="true">

                        <RadioGroup
                            android:id="@+id/rdgrp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/eng"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20dp"
                                android:drawableRight="@drawable/_northern_ireland_"
                                android:paddingTop="5dp"
                                android:paddingRight="10dp"
                                android:text="@string/english" />

                            <RadioButton
                                android:id="@+id/ar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20dp"
                                android:drawableRight="@drawable/_morocco_"
                                android:paddingTop="5dp"
                                android:paddingRight="10dp"
                                android:text="@string/arabic"
                                android:textDirection="ltr" />

                            <RadioButton
                                android:id="@+id/fr"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20dp"
                                android:drawableRight="@drawable/_france_"
                                android:paddingTop="5dp"
                                android:paddingRight="10dp"
                                android:text="@string/french" />
                        </RadioGroup>
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/nice_btn"
                        android:fontFamily="@font/raleway_bold"
                        android:padding="10dp"
                        android:text="@string/select_langue"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout>