<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/xvack"
    tools:context=".Home_form">

    <FrameLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/back_button" />

                <TextView
                    style="@style/name_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="CV Maroc"
                    android:textColor="@color/white"
                    android:textSize="40sp" />


            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@android:color/white"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="10dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/form_personal"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/white"
                    android:drawableRight="@drawable/ic_personal"
                    android:gravity="center_vertical"
                    android:text="@string/personal_details"
                    android:textColor="@android:color/black"
                    app:iconGravity="end"
                    app:iconTint="@android:color/transparent"
                    app:iconTintMode="add" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="10dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/form_education"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/white"
                    android:drawableRight="@drawable/ic_education"
                    android:gravity="center_vertical"
                    android:text="@string/educational_details"
                    android:textColor="@android:color/black"
                    app:iconGravity="end"
                    app:iconTint="@android:color/transparent"
                    app:iconTintMode="add" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="6dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/form_work"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/white"
                    android:drawableRight="@drawable/ic_experience"
                    android:gravity="center_vertical"
                    android:text="@string/experience"
                    android:textColor="@android:color/black"
                    app:iconGravity="end"
                    app:iconTint="@android:color/transparent"
                    app:iconTintMode="add" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="10dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/btn_skill_detail"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/white"
                    android:drawableRight="@drawable/ic_skill"
                    android:gravity="center_vertical"
                    android:text="@string/others"
                    android:textColor="@android:color/black"
                    app:iconGravity="end"
                    app:iconTint="@android:color/transparent"
                    app:iconTintMode="add" />

            </androidx.cardview.widget.CardView>


            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/view_cv_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nice_btn"
                android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:text="@string/view_cv"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:iconGravity="textStart" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>